add permit-nullness-assertion-exception.astub